--- a/Lecture01/L01 - python basics.ipynb
+++ b/Lecture01/L01 - python basics.ipynb
@@ -43,11 +43,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "x = 1e20\n",
-    "y = -1e20\n",
-    "z = 1."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -747,7 +743,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -761,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.6"
   },
   "latex_metadata": {
    "affiliation": "PHY407, University of Toronto",
