--- a/Lecture01/L01 - python basics.ipynb
+++ b/Lecture01/L01 - python basics.ipynb
@@ -867,7 +867,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -881,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.5"
   },
   "latex_metadata": {
    "affiliation": "PHY407, University of Toronto",
