--- a/Lecture02/L02 - Errors and integrals.ipynb
+++ b/Lecture02/L02 - Errors and integrals.ipynb
@@ -557,10 +557,10 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "4.40000000000000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,9 +736,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   },
   "latex_metadata": {
    "affiliation": "PHY407, University of Toronto",
