--- a/Lecture01/L01 - python basics.ipynb
+++ b/Lecture01/L01 - python basics.ipynb
@@ -736,7 +736,7 @@
     "\n",
     "* Number of radioactive atoms of uranium $N$ as a function of time given initial $N_0$ and\n",
     "$$\\frac{dN}{dt} = -\\frac{N}{\\tau}.$$\n",
-    "($\\tau = $ decay constant)\n",
+    "($\\tau =$ decay constant)\n",
     "* Use Euler method for integration."
    ]
   },
@@ -867,21 +867,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   },
   "latex_metadata": {
    "affiliation": "PHY407, University of Toronto",
