Added data flow chart for FFT, lecture 5

--- a/Lecture05/L05 - Fourier transforms.ipynb
+++ b/Lecture05/L05 - Fourier transforms.ipynb
@@ -341,6 +341,17 @@
     }
    },
    "source": [
+    "![Decimation in time of a length-N DFT into two length-N/2 DFTs followed by a combining stage (By Virens, CC BY 3.0  (https://creativecommons.org/licenses/by/3.0), from Wikimedia Commons).](DIT-FFT-butterfly.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* $j$-th set of samples at the $m$-th stage:\n",
     "$$E_k^{(m,j)} = \\sum_{p=0}^{N/2^m - 1}y_{2^m p + j}\\exp\\left(-i\\frac{2\\pi k p}{N/2^m}\\right),\\quad j \\in \\{0\\dots 2^m-1\\}$$\n",
     "Note: all $E_k$ and $O_k$ of previous slides are now some $E_k^{(m, j)}$.\n",
